Crash when saving bordered render as multilayer exr #91679

Closed
opened 2021-09-24 14:16:44 +02:00 by Simon Thommes · 3 comments
Member

System Information
Operating system: Linux-5.11.0-7614-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.73.01

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-24 11:38, hash: 2b9ca0f112
Worked: before Cycles X merge (?)

Short description of error
Trying to save a bordered render as multilayer exr crashes Blender
cycles_x_exr_region_render.mp4

Exact steps for others to reproduce the error

  • make a region render
  • try saving the render result as multilayer exr
  • crash
**System Information** Operating system: Linux-5.11.0-7614-generic-x86_64-with-glibc2.32 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.73.01 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-24 11:38, hash: `2b9ca0f112` Worked: before Cycles X merge (?) **Short description of error** Trying to save a bordered render as multilayer exr crashes Blender [cycles_x_exr_region_render.mp4](https://archive.blender.org/developer/F10570455/cycles_x_exr_region_render.mp4) **Exact steps for others to reproduce the error** - make a region render - try saving the render result as multilayer exr - crash
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes
Brecht Van Lommel self-assigned this 2021-09-24 14:56:54 +02:00

This issue was referenced by 741fa8180c

This issue was referenced by 741fa8180c4fbe98f3cc8b3eee239b03e26309f4

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91679
No description provided.