Fix T91679: Crash when saving bordered render as multilayer exr

The related issue which is fixed by this change is the missing noisy
image pass when denoising and border render is used,

Need to allocate passes after the passes has been copied from the
original render result.