source/blender/render/intern/pipeline.c
@@ -1015,10 +1015,10 @@ static void render_result_uncrop(Render *re)
       render_result_disprect_to_full_resolution(re);
 
       rres = render_result_new(re, &re->disprect, RR_ALL_LAYERS, RR_ALL_VIEWS);
-      render_result_passes_allocated_ensure(rres);
       rres->stamp_data = BKE_stamp_data_copy(re->result->stamp_data);
 
       render_result_clone_passes(re, rres, NULL);
+      render_result_passes_allocated_ensure(rres);
 
       render_result_merge(rres, re->result);
       render_result_free(re->result);
